--- a/popup.css
+++ b/popup.css
@@ -1,11 +1,97 @@
 .container {
   width: 280px;
-  color: #314d3e;
+  color: #000000;
+  background-color: rgb(255, 255, 255);
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.title-div{
+  background-color: #eeeeee;
+  padding: 10px 20px;
+}
+#title-img {
+  width: 70%;
+  display: block;
+  margin: 0 auto;
 }
 
-.title {
-  font-size: 14px;
-  font-weight: bold;
-  padding: 8px;
+/*options*/
+.options-group{
+  margin-top: 20px;
 }
 
+.options-title{
+  margin-bottom: 10px;
+}
+
+.option {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  border-bottom: 1px solid #e6e6e6;
+}
+.option-text{
+  margin-right: 10px;
+}
+
+/*toggle button*/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin: 0 8px;
+}
+
+.switch input{
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider{
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #222e50;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before{
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider{
+  background-color: #00BD9D;
+}
+
+input:focus + .slider{
+  box-shadow: 0 0 1px #00BD9D;
+}
+
+input:checked + .slider:before{
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round{
+  border-radius: 34px;
+}
+
+.slider.round:before{
+  border-radius: 50%;
+}
