languages somehwat working. bad code

--- a/components/table/table.html
+++ b/components/table/table.html
@@ -1,7 +1,7 @@
 <!-- table.html -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
         <div class="header-content">
             <img src="../../assets/Kalimat_icon.png" alt="Icon" class="icon">
             <div class="title">
-                <h1>List of keywords</h1>
+                <h1 class = "lang-text">List of keywords</h1>
             </div>
         </div>
     </div>
@@ -22,6 +22,7 @@
         <table id="related-words-table"></table>
     </div>
     <!-- <script src="../../lib/table.js"></script> -->
-    <script src="table.js"></script>
+    <script type="module" src="LanguageManager.js"></script>
+    <script type="module" src="table.js"></script>
 </body>
 </html>
