--- a/components/chart/chart.html
+++ b/components/chart/chart.html
@@ -1,6 +1,6 @@
 <!-- Updated chart.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html dir = "ltr" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +13,11 @@
         <div class="header-content">
             <img src="../../assets/Kalimat_icon.png" alt="Icon" class="icon">
             <div class="title">
-                <h1>Search volume data</h1>
+                <h1 class = "lang-text">Search volume data</h1>
                 <div class="options">
-                    <span>Years</span>
-                    <span class= "selected">Months</span>
-                    <span>Days</span>
+                    <span class = "lang-text">Years</span>
+                    <span class= "selected lang-text">Months</span>
+                    <span class = "lang-text">Days</span>
                 </div>
             </div>
         </div>
@@ -29,7 +29,9 @@
     </div>
 
     <!-- Chart Scripts -->
-    <script src="../../lib/chart.js"></script>
-    <script src="chart.js"></script>
+    <!-- <script type="module" src="../../scripts/LanguageManager.js"></script> -->
+    <script type="module" src="../../lib/chart.js"></script>
+    <script type="module" src="chart.js"></script>
+    
 </body>
 </html>
