--- a/components/chart/chart.html
+++ b/components/chart/chart.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monthly Chart</title>
-    <link rel="stylesheet" type="text/css" href="chart.css">
+    <link rel="stylesheet" type="text/css" href="chart_en.css">
 </head>
 <body>
     <!-- Header -->
@@ -30,6 +30,7 @@
 
     <!-- Chart Scripts -->
     <!-- <script type="module" src="../../scripts/LanguageManager.js"></script> -->
+
     <script type="module" src="../../lib/chart.js"></script>
     <script type="module" src="chart.js"></script>
     
