--- a/components/table/table.html
+++ b/components/table/table.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keyword Table</title>
-    <link rel="stylesheet" type="text/css" href="table.css">
+    <link rel="stylesheet" type="text/css" href="table_en.css">
 </head>
 <body>
     <div id="header">
@@ -19,10 +19,16 @@
     </div>
 
     <div id="table-container">
-        <table id="related-words-table"></table>
+        <table id="related-words-table">
+            <tr>
+                <th class="lang-text">Similar Words</th>
+                <th class="lang-text">Volume</th>
+                <th class="lang-text">Competition</th>
+            </tr>
+        </table>
     </div>
     <!-- <script src="../../lib/table.js"></script> -->
-    <script type="module" src="LanguageManager.js"></script>
+    <!-- <script type="module" src="../../scripts/LanguageManager.js"></script> -->
     <script type="module" src="table.js"></script>
 </body>
 </html>
