--- a/popup_ar.css
+++ b/popup_ar.css
@@ -1,10 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  /* width: 700px;
-  height: 400px; */
-  font-size: 14px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
   color: #000000;
   background-color: rgb(255, 255, 255);
 }
@@ -13,25 +10,23 @@ body {
   width: 500px;
   color: #000000;
   background-color: rgb(255, 255, 255);
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+  font-family: "Tajawal", sans-serif;
 }
-.title-div{
+.title-div {
   background-color: #eeeeee;
-  
 }
 #title-img {
-  width:100%;
+  width: 100%;
   display: block;
   margin: 0 auto;
 }
 
 /*options*/
-.options-group{
-  margin-top: 20px;
-}
+/* .options-group{
+    margin-top: 20px;
+  } */
 
-.options-title{
+.options-title {
   margin-bottom: 10px;
 }
 
@@ -42,8 +37,10 @@ body {
   padding: 10px 20px;
   border-bottom: 1px solid #e6e6e6;
 }
-.option-text{
+.option-text {
   margin-right: 10px;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 /*toggle button*/
@@ -55,13 +52,13 @@ body {
   margin: 0 8px;
 }
 
-.switch input{
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-.slider{
+.slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -73,7 +70,7 @@ body {
   transition: 0.4s;
 }
 
-.slider:before{
+.slider:before {
   position: absolute;
   content: "";
   height: 26px;
@@ -85,25 +82,24 @@ body {
   transition: 0.4s;
 }
 
-input:checked + .slider{
-  background-color: #00BD9D;
+input:checked + .slider {
+  background-color: #00bd9d;
 }
 
-input:focus + .slider{
-  box-shadow: 0 0 1px #00BD9D;
+input:focus + .slider {
+  box-shadow: 0 0 1px #00bd9d;
 }
 
-input:checked + .slider:before{
+input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
 
-.slider.round{
+.slider.round {
   border-radius: 34px;
 }
 
-.slider.round:before{
+.slider.round:before {
   border-radius: 50%;
 }
-
