--- a/popup_en.css
+++ b/popup_en.css
@@ -1,10 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  /* width: 700px;
-  height: 400px; */
-  font-size: 14px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: #000000;
   background-color: rgb(255, 255, 255);
 }
@@ -27,9 +23,9 @@ body {
 }
 
 /*options*/
-.options-group{
+/* .options-group{
   margin-top: 20px;
-}
+} */
 
 .options-title{
   margin-bottom: 10px;
@@ -44,6 +40,8 @@ body {
 }
 .option-text{
   margin-right: 10px;
+  font-size: 25px;
+  font-weight: normal;
 }
 
 /*toggle button*/
